Update Code link in index.html

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <h1 style="text-align: center;">DualRecon: Building 3D Reconstruction from Dual-View Re-mote Sensing Images</h1>
                     <h3 style="text-align: center;">
                         <a href="https://github.com/ShaoRuizhe/DualRecon.github.io">Paper</a>&emsp;
-                        <a href="https://github.com/ShaoRuizhe/DualRecon.github.io">Code</a>
+                        <a href="https://github.com/ShaoRuizhe/DualRecon">Code</a>
                         <a href="https://github.com/ShaoRuizhe/DualRecon.github.io">Data</a></h3>
                     <div style="text-align:center"><img style="width: 600px;" src="intro.png"></div>
                     <div style="margin:auto;max-width: 666px;text-align:justify">
